Integrate with Amazon Bedrock

--- a/smart-tutor-backend/src/main/resources/application.properties
+++ b/smart-tutor-backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=smart-tutor-backend
+
+#spring.ai.model.chat=anthropic.claude-3-5-sonnet-20241022-v2:0
+
+# === AWS Credentials & Region ===
+spring.ai.bedrock.aws.region=us-west-2
+# === Spring AI Bedrock Chat Settings ===
+spring.ai.bedrock.converse.chat.options.model=anthropic.claude-3-5-sonnet-20240620-v1:0
+spring.ai.bedrock.converse.chat.options.temperature=1
+spring.ai.bedrock.converse.chat.options.max-tokens=8192
