--- a/smart-tutor-backend/src/main/resources/application.properties
+++ b/smart-tutor-backend/src/main/resources/application.properties
@@ -4,7 +4,14 @@ spring.application.name=smart-tutor-backend
 
 # === AWS Credentials & Region ===
 spring.ai.bedrock.aws.region=us-west-2
+
 # === Spring AI Bedrock Chat Settings ===
 spring.ai.bedrock.converse.chat.options.model=anthropic.claude-3-5-sonnet-20240620-v1:0
 spring.ai.bedrock.converse.chat.options.temperature=1
 spring.ai.bedrock.converse.chat.options.max-tokens=8192
+
+# Explicitly enable the Bedrock Image Model
+spring.ai.bedrock.image.enabled=true
+# Set the Stable Diffusion 3.5 Large model ID
+spring.ai.bedrock.image.options.model=stability.sd3-5-large-v1:0
+
