Integrate with Amazon Polly and increase claude request timeout

--- a/smart-tutor-backend/serverless.yml
+++ b/smart-tutor-backend/serverless.yml
@@ -3,7 +3,7 @@ service: lesson-api   # name of your service
 provider:
   name: aws
   runtime: java21     # or java17 if you’re using Java 17
-  region: us-east-2
+  region: us-west-2
   memorySize: 1024
   timeout: 30
   stage: dev
