--- a/smart-tutor-backend/pom.xml
+++ b/smart-tutor-backend/pom.xml
@@ -69,12 +69,12 @@
 
         <dependency>
             <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-starter-model-bedrock</artifactId>
+            <artifactId>spring-ai-starter-model-bedrock-converse</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-starter-model-bedrock-converse</artifactId>
+            <artifactId>spring-ai-starter-model-bedrock</artifactId>
         </dependency>
 
         <dependency>
@@ -94,10 +94,18 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
         </dependency>
-        <!-- For JSON -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>polly</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version> <!-- or latest version -->
         </dependency>
 
     </dependencies>
